--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -3066,4 +3066,214 @@
   <data name="None1" xml:space="preserve">
     <value>Enginn</value>
   </data>
+  <data name="Arriving_word" xml:space="preserve">
+    <value>koma</value>
+  </data>
+  <data name="Avatars_are_in" xml:space="preserve">
+    <value>Avatars eru ennþá í</value>
+  </data>
+  <data name="Bakeword" xml:space="preserve">
+    <value>Bakið</value>
+  </data>
+  <data name="BeachGrass" xml:space="preserve">
+    <value>Beach Grass</value>
+  </data>
+  <data name="BeachGrass1" xml:space="preserve">
+    <value>BeachGrass 1</value>
+  </data>
+  <data name="BulkLoad" xml:space="preserve">
+    <value>Magn álagssvæði</value>
+  </data>
+  <data name="Cypress1" xml:space="preserve">
+    <value>Cypress 1</value>
+  </data>
+  <data name="Cypress2" xml:space="preserve">
+    <value>Cypress 2</value>
+  </data>
+  <data name="Cypress_1" xml:space="preserve">
+    <value>Cypress 1</value>
+  </data>
+  <data name="Cypress_2" xml:space="preserve">
+    <value>Cypress 2</value>
+  </data>
+  <data name="DelayBeforeExit" xml:space="preserve">
+    <value>Sekúndur áður en beðið er</value>
+  </data>
+  <data name="Delete_All" xml:space="preserve">
+    <value>Eyða öllu</value>
+  </data>
+  <data name="Delete_and_then_Apply" xml:space="preserve">
+    <value>Eyða og nota síðan</value>
+  </data>
+  <data name="Dogwood" xml:space="preserve">
+    <value>Dogwood</value>
+  </data>
+  <data name="EditorWord" xml:space="preserve">
+    <value>Ritstjóri</value>
+  </data>
+  <data name="Eelgrass" xml:space="preserve">
+    <value>Álgras</value>
+  </data>
+  <data name="EndSizeXYZ" xml:space="preserve">
+    <value>Lokastærð XYZ</value>
+  </data>
+  <data name="Eucalyptus" xml:space="preserve">
+    <value>Tröllatré</value>
+  </data>
+  <data name="Fern" xml:space="preserve">
+    <value>Fern</value>
+  </data>
+  <data name="FillSizeLabel" xml:space="preserve">
+    <value>Fylltu stærð á svæðum</value>
+  </data>
+  <data name="Flat" xml:space="preserve">
+    <value>Íbúð</value>
+  </data>
+  <data name="Generated_word" xml:space="preserve">
+    <value>Myndað</value>
+  </data>
+  <data name="Height" xml:space="preserve">
+    <value>Hæð</value>
+  </data>
+  <data name="HelpLandcaping" xml:space="preserve">
+    <value>Hjálpaðu landmótun</value>
+  </data>
+  <data name="HelpPlantEditor" xml:space="preserve">
+    <value>Hjálpaðu Plönturitstjóra</value>
+  </data>
+  <data name="HelpSmartStart" xml:space="preserve">
+    <value>Hjálpaðu Smart Start</value>
+  </data>
+  <data name="HelpTerrains" xml:space="preserve">
+    <value>Hjálpaðu landsvæðum</value>
+  </data>
+  <data name="JustOptions" xml:space="preserve">
+    <value>Bara valkostir</value>
+  </data>
+  <data name="Kelp1" xml:space="preserve">
+    <value>Þara 1</value>
+  </data>
+  <data name="Kelp2" xml:space="preserve">
+    <value>Þara 2</value>
+  </data>
+  <data name="leaving_word" xml:space="preserve">
+    <value>fara</value>
+  </data>
+  <data name="LoadTerrain" xml:space="preserve">
+    <value>LoadTerrain</value>
+  </data>
+  <data name="Noise" xml:space="preserve">
+    <value>Hávaði</value>
+  </data>
+  <data name="Oak" xml:space="preserve">
+    <value>Eik</value>
+  </data>
+  <data name="OwnerOfRegions" xml:space="preserve">
+    <value>Eigandi nærliggjandi svæða</value>
+  </data>
+  <data name="Palm1" xml:space="preserve">
+    <value>Palm 1</value>
+  </data>
+  <data name="Palm11" xml:space="preserve">
+    <value>Palm 1</value>
+  </data>
+  <data name="ParkingRegion" xml:space="preserve">
+    <value>BílastæðiSvæði</value>
+  </data>
+  <data name="Parking_Spot" xml:space="preserve">
+    <value>Bílastæði Sim</value>
+  </data>
+  <data name="Parking_Spot1" xml:space="preserve">
+    <value>Bílastæði Sim</value>
+  </data>
+  <data name="Pine1" xml:space="preserve">
+    <value>Fura 1</value>
+  </data>
+  <data name="Pine11" xml:space="preserve">
+    <value>Fura 1</value>
+  </data>
+  <data name="Pine2" xml:space="preserve">
+    <value>Pine 2</value>
+  </data>
+  <data name="Pine21" xml:space="preserve">
+    <value>Pine 2</value>
+  </data>
+  <data name="Pine22" xml:space="preserve">
+    <value>Pine 2</value>
+  </data>
+  <data name="Plants" xml:space="preserve">
+    <value>Plöntur</value>
+  </data>
+  <data name="Plumeria" xml:space="preserve">
+    <value>Plumeria</value>
+  </data>
+  <data name="RandomTerrain" xml:space="preserve">
+    <value>Random Terrain</value>
+  </data>
+  <data name="RegenTerrains" xml:space="preserve">
+    <value>Regen landsvæði</value>
+  </data>
+  <data name="RegionMaker" xml:space="preserve">
+    <value>Svæðisframleiðandi</value>
+  </data>
+  <data name="Revert" xml:space="preserve">
+    <value>Snúðu við</value>
+  </data>
+  <data name="SaveTerrain" xml:space="preserve">
+    <value>Vista Terrain</value>
+  </data>
+  <data name="SeaSword" xml:space="preserve">
+    <value>Sjósverð</value>
+  </data>
+  <data name="Seconds" xml:space="preserve">
+    <value>Sekúndur</value>
+  </data>
+  <data name="Smooth" xml:space="preserve">
+    <value>Slétt</value>
+  </data>
+  <data name="StartSizeXYZ" xml:space="preserve">
+    <value>Byrjunarstærð XYZ</value>
+  </data>
+  <data name="Taper" xml:space="preserve">
+    <value>Taper</value>
+  </data>
+  <data name="Temporary_Regions" xml:space="preserve">
+    <value>Notaðu tímabundin svæði</value>
+  </data>
+  <data name="TreelineHigh" xml:space="preserve">
+    <value>Treeline High</value>
+  </data>
+  <data name="TreeLineLow" xml:space="preserve">
+    <value>TreeLine Low</value>
+  </data>
+  <data name="TropicalBush1" xml:space="preserve">
+    <value>Tropical Bush 1</value>
+  </data>
+  <data name="TropicalBush2" xml:space="preserve">
+    <value>Tropical Bush 2</value>
+  </data>
+  <data name="ViewTerrainFolder" xml:space="preserve">
+    <value>View Terrain Folder</value>
+  </data>
+  <data name="WaterWord" xml:space="preserve">
+    <value>Vatn</value>
+  </data>
+  <data name="WinterAspen" xml:space="preserve">
+    <value>Vetrar aspur</value>
+  </data>
+  <data name="WinterAspen1" xml:space="preserve">
+    <value>Vetrar aspur</value>
+  </data>
+  <data name="WinterPine1" xml:space="preserve">
+    <value>Winter Pine 1</value>
+  </data>
+  <data name="WinterPine11" xml:space="preserve">
+    <value>Winter Pine 1</value>
+  </data>
+  <data name="WinterPine2" xml:space="preserve">
+    <value>Winter Pine 2</value>
+  </data>
+  <data name="WinterPine21" xml:space="preserve">
+    <value>Winter Pine 2</value>
+  </data>
 </root>
