--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pt.resx
@@ -3066,4 +3066,214 @@
   <data name="None1" xml:space="preserve">
     <value>Nenhum</value>
   </data>
+  <data name="Arriving_word" xml:space="preserve">
+    <value>A chegar</value>
+  </data>
+  <data name="Avatars_are_in" xml:space="preserve">
+    <value>Os avatares ainda estão em</value>
+  </data>
+  <data name="Bakeword" xml:space="preserve">
+    <value>Assar</value>
+  </data>
+  <data name="BeachGrass" xml:space="preserve">
+    <value>Beach Grass</value>
+  </data>
+  <data name="BeachGrass1" xml:space="preserve">
+    <value>BeachGrass 1</value>
+  </data>
+  <data name="BulkLoad" xml:space="preserve">
+    <value>Regiões de carregamento em massa</value>
+  </data>
+  <data name="Cypress1" xml:space="preserve">
+    <value>Cypress 1</value>
+  </data>
+  <data name="Cypress2" xml:space="preserve">
+    <value>Cypress 2</value>
+  </data>
+  <data name="Cypress_1" xml:space="preserve">
+    <value>Cypress 1</value>
+  </data>
+  <data name="Cypress_2" xml:space="preserve">
+    <value>Cypress 2</value>
+  </data>
+  <data name="DelayBeforeExit" xml:space="preserve">
+    <value>Segundos antes de esperar</value>
+  </data>
+  <data name="Delete_All" xml:space="preserve">
+    <value>Apagar tudo</value>
+  </data>
+  <data name="Delete_and_then_Apply" xml:space="preserve">
+    <value>Exclua e depois aplique</value>
+  </data>
+  <data name="Dogwood" xml:space="preserve">
+    <value>Dogwood</value>
+  </data>
+  <data name="EditorWord" xml:space="preserve">
+    <value>editor</value>
+  </data>
+  <data name="Eelgrass" xml:space="preserve">
+    <value>Eelgrass</value>
+  </data>
+  <data name="EndSizeXYZ" xml:space="preserve">
+    <value>Tamanho final XYZ</value>
+  </data>
+  <data name="Eucalyptus" xml:space="preserve">
+    <value>Eucalipto</value>
+  </data>
+  <data name="Fern" xml:space="preserve">
+    <value>Samambaia</value>
+  </data>
+  <data name="FillSizeLabel" xml:space="preserve">
+    <value>Tamanho de preenchimento nas regiões</value>
+  </data>
+  <data name="Flat" xml:space="preserve">
+    <value>Apartamento</value>
+  </data>
+  <data name="Generated_word" xml:space="preserve">
+    <value>Gerado</value>
+  </data>
+  <data name="Height" xml:space="preserve">
+    <value>Altura</value>
+  </data>
+  <data name="HelpLandcaping" xml:space="preserve">
+    <value>Ajude Landcaping</value>
+  </data>
+  <data name="HelpPlantEditor" xml:space="preserve">
+    <value>Ajuda Editor de Plantas</value>
+  </data>
+  <data name="HelpSmartStart" xml:space="preserve">
+    <value>Ajuda Smart Start</value>
+  </data>
+  <data name="HelpTerrains" xml:space="preserve">
+    <value>Ajude o Terrains</value>
+  </data>
+  <data name="JustOptions" xml:space="preserve">
+    <value>Apenas opções</value>
+  </data>
+  <data name="Kelp1" xml:space="preserve">
+    <value>Kelp 1</value>
+  </data>
+  <data name="Kelp2" xml:space="preserve">
+    <value>Kelp 2</value>
+  </data>
+  <data name="leaving_word" xml:space="preserve">
+    <value>deixando</value>
+  </data>
+  <data name="LoadTerrain" xml:space="preserve">
+    <value>LoadTerrain</value>
+  </data>
+  <data name="Noise" xml:space="preserve">
+    <value>Ruído</value>
+  </data>
+  <data name="Oak" xml:space="preserve">
+    <value>Carvalho</value>
+  </data>
+  <data name="OwnerOfRegions" xml:space="preserve">
+    <value>Proprietário de regiões circunvizinhas</value>
+  </data>
+  <data name="Palm1" xml:space="preserve">
+    <value>Palm 1</value>
+  </data>
+  <data name="Palm11" xml:space="preserve">
+    <value>Palm 1</value>
+  </data>
+  <data name="ParkingRegion" xml:space="preserve">
+    <value>ParkingRegion</value>
+  </data>
+  <data name="Parking_Spot" xml:space="preserve">
+    <value>Sim de estacionamento</value>
+  </data>
+  <data name="Parking_Spot1" xml:space="preserve">
+    <value>Sim de estacionamento</value>
+  </data>
+  <data name="Pine1" xml:space="preserve">
+    <value>Pinho 1</value>
+  </data>
+  <data name="Pine11" xml:space="preserve">
+    <value>Pinho 1</value>
+  </data>
+  <data name="Pine2" xml:space="preserve">
+    <value>Pinho 2</value>
+  </data>
+  <data name="Pine21" xml:space="preserve">
+    <value>Pinho 2</value>
+  </data>
+  <data name="Pine22" xml:space="preserve">
+    <value>Pinho 2</value>
+  </data>
+  <data name="Plants" xml:space="preserve">
+    <value>Plantas</value>
+  </data>
+  <data name="Plumeria" xml:space="preserve">
+    <value>Plumeria</value>
+  </data>
+  <data name="RandomTerrain" xml:space="preserve">
+    <value>Terreno Aleatório</value>
+  </data>
+  <data name="RegenTerrains" xml:space="preserve">
+    <value>Regen Terrains</value>
+  </data>
+  <data name="RegionMaker" xml:space="preserve">
+    <value>Criador de região</value>
+  </data>
+  <data name="Revert" xml:space="preserve">
+    <value>Reverter</value>
+  </data>
+  <data name="SaveTerrain" xml:space="preserve">
+    <value>Salvar terreno</value>
+  </data>
+  <data name="SeaSword" xml:space="preserve">
+    <value>Espada do Mar</value>
+  </data>
+  <data name="Seconds" xml:space="preserve">
+    <value>Segundos</value>
+  </data>
+  <data name="Smooth" xml:space="preserve">
+    <value>Suave</value>
+  </data>
+  <data name="StartSizeXYZ" xml:space="preserve">
+    <value>Tamanho inicial XYZ</value>
+  </data>
+  <data name="Taper" xml:space="preserve">
+    <value>Taper</value>
+  </data>
+  <data name="Temporary_Regions" xml:space="preserve">
+    <value>Use regiões temporárias</value>
+  </data>
+  <data name="TreelineHigh" xml:space="preserve">
+    <value>Treeline High</value>
+  </data>
+  <data name="TreeLineLow" xml:space="preserve">
+    <value>TreeLine Low</value>
+  </data>
+  <data name="TropicalBush1" xml:space="preserve">
+    <value>Bush tropical 1</value>
+  </data>
+  <data name="TropicalBush2" xml:space="preserve">
+    <value>Bush tropical 2</value>
+  </data>
+  <data name="ViewTerrainFolder" xml:space="preserve">
+    <value>Exibir pasta de terreno</value>
+  </data>
+  <data name="WaterWord" xml:space="preserve">
+    <value>Água</value>
+  </data>
+  <data name="WinterAspen" xml:space="preserve">
+    <value>Winter Aspen</value>
+  </data>
+  <data name="WinterAspen1" xml:space="preserve">
+    <value>Winter Aspen</value>
+  </data>
+  <data name="WinterPine1" xml:space="preserve">
+    <value>Winter Pine 1</value>
+  </data>
+  <data name="WinterPine11" xml:space="preserve">
+    <value>Winter Pine 1</value>
+  </data>
+  <data name="WinterPine2" xml:space="preserve">
+    <value>Winter Pine 2</value>
+  </data>
+  <data name="WinterPine21" xml:space="preserve">
+    <value>Winter Pine 2</value>
+  </data>
 </root>
